--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <textarea name="Why do you want to adopt this animal" placeholder="Why do you want to adopt the selected animal??"></textarea>
 
-<div class="BUtton">
+<div class="Button">
     <BUtton> Submit</BUtton>
     </div>
 </section>
