--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <option value="Cock">Cock</option>
     <option value="pig">pig</option>
     <option value="Snake">Snake</option>
+    <option value="aligator">aligator</option>
 
 </select>
 
