--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <option value="pig">pig</option>
     <option value="Snake">Snake</option>
     <option value="aligator">aligator</option>
+    <option value="Antelope">Antelope</option>
 
 </select>
 
